style/_chat.scss
#app-chat {
    position: absolute;
    height: 100%;
    width: 100%;
    top: 0;

    @media (max-width: 425px) {
        position: relative;
        height: 100%;
        padding: 0;

        .container {
            > .row {
                margin: 0;
                padding: 0 10px !important;
            }
        }
    }

    @media (min-width: 992px) {  }

    @media (min-width: 1200px) { }

    .users-list {
        border-bottom: 1px dashed darken($light, 8);
        padding: 8px 10px 12px;
        @media (max-width: 425px) {
            padding: 8px 0 12px;
        }
    }

    .chat-messages {
        position: absolute;
        overflow: hidden;
        overflow-y: scroll;
        width: 100%;

        @media (max-width: 425px) {
            position: relative;
            height: auto;
            bottom: 0;
            padding: 0 !important;
        }
    }

    .chat-form {
        position: absolute;
        bottom: 10px;
        height: 115px;
        background-color: lighten($dark, 70);
        width: 100%;
        border-top: 1px dashed darken($light, 8);

        .chat-input {
            width: 100%;
            input {
                width: 100%;
            }
        }

        .chat-input-send {
            float: right;
        }

        @media (max-width: 425px) {
            width: 100%;
            bottom: 0;
            position: fixed;
            height: auto;
            padding: 10px;
        }
    }
}

